--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: "3.7"
 
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: django_blog_app:v1
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
@@ -13,16 +11,16 @@ services:
     env_file: ./env/app/dev.env
     depends_on:
       - db
-    restart: unless-stopped
+    restart: always
 
   db:
-    build: ./postgres
+    image: mariadb:10.5
     restart: unless-stopped
     volumes:
-      - ./postgres_data_dev:/var/lib/postgresql/data/
+      - ./mariadb_data_dev:/var/lib/mysql/
     env_file: ./env/db/db.dev.env
     ports:
-      - 5432:5432
+      - 3306:3306
 
 volumes:
   postgres_data_dev:
