--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,7 @@ version: "3.7"
 
 services:
   web:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
+    image: moswil/blog_app:v1
     command: gunicorn --workers=3 blog_app.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/static
