--- a/nginx/blog_app_django.conf
+++ b/nginx/blog_app_django.conf
@@ -6,18 +6,25 @@ server {
 
     listen 80;
     charset utf-8;
-    server_name  127.0.0.1;
-
+    
+    # Handle noisy favicon.ico messages in nginx
+     location = /favicon.ico {
+        return 204;
+        access_log     off;
+        log_not_found  off;
+    }
 
     client_max_body_size 4G;
     access_log /home/app/web/logs/nginx-access.log;
     error_log /home/app/web/logs/nginx-error.log;
 
 
+    # django app
     location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header   X-Forwarded-Host $server_name;
         proxy_redirect off;
         if (!-f $request_filename) {
             proxy_pass http://blog_app_django;
