--- a/env/app/prod.env.example
+++ b/env/app/prod.env.example
@@ -2,6 +2,7 @@ DEBUG=0
 
 SECRET_KEY=your_secret_key
 
+# Be sure to include your server IP here
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 
