--- a/nginx/blog_app_django.conf
+++ b/nginx/blog_app_django.conf
@@ -5,6 +5,8 @@ upstream blog_app_django {
 server {
 
     listen 80;
+    server_name blog.django.com;
+    
     charset utf-8;
     
     # Handle noisy favicon.ico messages in nginx
