Issue/2 setup ci cd pipeline (#6)
* #2 restructuring the project structure to easily enable CI/CD integration.

* #2 adding `Dockerfile` and `docker-compose.yml` files, and scripts to create docker images.

* #2 added docker, nginx, postgreSQL database and environment configs for moving to production.

* #2 finalized setting up docker for both production and development on different environments.

* #2 added `env.sample` files to guide others on the required environment variables for each environment.

* #2 setting up travis CI and writing simple test just enough to make travis pass.

* #2 Fixing `manage.py` when no `.env` has been given, typical on CI server.

* writing simple tests to allow travis to pass.

* #2 added all files to create and push image to docker hub.

Co-authored-by: Moses-Ongwenyi <moses.ongwenyi@ibm.com>

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,11 @@ verify_ssl = true
 [packages]
 django = "*"
 autopep8 = "*"
+gunicorn = "*"
+psycopg2 = "*"
+flake8 = "*"
+mysqlclient = "*"
+django-dotenv = "*"
 
 [requires]
 python_version = "3.7"
